--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,31 +1,71 @@
 <!-- login Form -->
 <section class="h-100 overflow-hidden">
-    <div class="bg-image d-flex justify-content-around align-items-center h-100">
-        <!-- Left Section -->
-      <img src="./../../assets/images/1Rhythm_logo.png" alt="1Rhythm-logo" class="img-responsive">
-           <!-- Right Section -->
-        <div class="login-from-wrapper bg-white p-5 ">
-        <span class="text-uppercase fw-bold mb-5">welcome</span>
-        <h3 class="my-3 fw-bold">Login to Your Account</h3>
-        <span class="mb-4 fs-7 ">Create an Account? 
-            <a href="" class="text-decoration-none fw-bold" routerLink="/ragistration">Sign Up</a>
-        </span>
-        <!-- Start Form  -->
-        <form>
-            <div class="form-group mb-4 mt-5 ">
-              <label for="email" class="fw-bold ">Email ID <span class="text-danger"> *</span></label>
-              <input type="email" class="form-control" id="email"  placeholder="Email">
-            </div>
-            <div class="form-group mb-5">
-              <label for="password" class="fw-bold">Password <span class="text-danger"> *</span></label>
-              <input type="password" class="form-control" id="password" placeholder="Password">
-            </div>
-            <div class="button mb-1">
-                <button type="submit" class="btn btn-primary btn-gradient border-0">Sign In</button>
-            </div>
-          </form>
-          <!-- End Form -->
-      </div>
+  <div class="bg-image d-flex justify-content-around align-items-center h-100">
+    <!-- Left Section -->
+    <img src="./../../assets/images/1Rhythm_logo.png" alt="1Rhythm-logo" class="img-responsive" />
+    <!-- Right Section -->
+    <div class="login-from-wrapper bg-white p-5">
+      <span class="text-uppercase fw-bold mb-5">welcome</span>
+      <h3 class="my-3 fw-bold">Login to Your Account</h3>
+      <span class="mb-4 fs-7">Create an Account?
+        <a href="" class="text-decoration-none fw-bold" routerLink="/ragistration">Sign Up</a>
+      </span>
+      <!-- Start Form  -->
+      <form [formGroup]="userLogin" (ngSubmit)="login()">
+        <div class="mb-4 mt-5">
+          <div class="form-group">
+            <label for="email" class="fw-bold">Email ID <span class="text-danger"> *</span></label>
+            <input type="email" class="form-control" id="email" placeholder="Email" formControlName="email" [ngClass]="{
+                'border-danger':
+                  validator['email'].invalid &&
+                  (isSubmited || validator['email'].touched)
+              }" />
+          </div>
+          <div *ngIf="
+              validator['email'].invalid &&
+              (isSubmited ||
+                validator['email'].dirty ||
+                validator['email'].touched)
+            ">
+            <span class="text-danger" *ngIf="validator['email'].errors?.['required']">This field is required</span>
+            <span *ngIf="validator['email'].errors?.['pattern'] && (isSubmited || validator['email'].touched)"
+              class="text-danger">
+              User does not exist</span>
+          </div>
+        </div>
+
+        <div class="mb-5">
+          <div class="form-group">
+            <label for="password" class="fw-bold">Password <span class="text-danger"> *</span></label>
+            <input type="password" class="form-control" id="password" placeholder="Password" formControlName="password"
+              [ngClass]="{
+                'border-danger':
+                  validator['password'].invalid &&
+                  (isSubmited || validator['password'].touched)
+              }" />
+          </div>
+          <div *ngIf="
+              validator['password'].invalid &&
+              (isSubmited ||
+                validator['password'].dirty ||
+                validator['password'].touched)
+            ">
+            <span class="text-danger" *ngIf="validator['password'].errors?.['required']">This field is required</span>
+            <span *ngIf="validator['password'].errors?.['pattern'] && (validator['password'].touched)"
+              class="text-danger">
+              Please enter valid password
+            </span>
+          </div>
+        </div>
+
+        <div class="button mb-1">
+          <button type="submit" class="btn btn-primary btn-gradient border-0">
+            Sign In
+          </button>
+        </div>
+      </form>
+      <!-- End Form -->
     </div>
+  </div>
 </section>
 <!-- End Login From -->
