--- a/src/assets/icons/style.css
+++ b/src/assets/icons/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?ytzkx4');
-  src:  url('fonts/icomoon.eot?ytzkx4#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?ytzkx4') format('truetype'),
-    url('fonts/icomoon.woff?ytzkx4') format('woff'),
-    url('fonts/icomoon.svg?ytzkx4#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?x5fe4y');
+  src:  url('fonts/icomoon.eot?x5fe4y#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?x5fe4y') format('truetype'),
+    url('fonts/icomoon.woff?x5fe4y') format('woff'),
+    url('fonts/icomoon.svg?x5fe4y#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,6 +25,13 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-chevron-down:before {
+  content: "\e914";
+}
+.icon-home:before {
+  content: "\e915";
+  color: #2c61d7;
+}
 .icon-suit-heart:before {
   content: "\e90a";
 }
