--- a/src/assets/scss/layout/_header.scss
+++ b/src/assets/scss/layout/_header.scss
@@ -1,27 +1,42 @@
 header {
+
     .logo {
         img {
             width: $header-logo-image-width;
-            @media (max-width: 992px) {
+
+            @media (max-width: $Large-lg) {
                 width: $header-logo-image-width-lg;
             }
         }
     }
+
     .profile-image {
         width: $profile-image-width;
         height: $profile-image-height;
         border-radius: $profile-image-Border-radius;
     }
-}
-.sidebar {
-    position: absolute;
-    transition: all 0.5s ease-in-out;
-    left: 100%;
-    z-index: 100;
-    height: 400px;
-    visibility: hidden;
-}
-#menuOpen:checked+.sidebar {
-    left: 0;
-   visibility: visible;
+
+    .sidebar {
+        position: absolute;
+        transition: visibility 0.4s ease-in-out, opacity 0.4s ease-in-out;
+        z-index: 100;
+        height: 450px;
+        visibility: hidden;
+        opacity: 0;
+
+        .nav {
+            .nav-item {
+                &:hover {
+                    background-color: lighten($color: $primary, $amount: 40);
+
+                }
+            }
+        }
+    }
+
+    #menuOpen:checked+.sidebar {
+        visibility: visible;
+        opacity: 1;
+    }
+
 }
