--- a/src/assets/scss/layout/_loginFrom.scss
+++ b/src/assets/scss/layout/_loginFrom.scss
@@ -1,38 +1,18 @@
+// Login Form Style
 section {
   .bg-image {
     background: url("./../../../assets/images/background.png");
     background-size: cover;
 
-    @media (max-width: 992px) {
+    @media (max-width: $Large-lg) {
       flex-direction: column;
     }
 
     img {
-      @media (max-width: 576px) {
-        width: 220px;
-        margin-top: 100px;
+      @media (max-width: $Small-sm) {
+        width: $login-logo-image-width;
       }
     }
 
-    .login-from-wrapper {
-      width: 400px;
-
-      @media (max-width: 576px) {
-        width: 300px;
-        padding: 30px !important;
-
-      }
-    }
-
-    form {
-      .button {
-        @media (max-width: 576px) {
-          display: flex;
-          justify-content: center;
-          align-items: center;
-
-        }
-      }
-    }
   }
 }
