--- a/src/assets/scss/layout/_registration-form.scss
+++ b/src/assets/scss/layout/_registration-form.scss
@@ -1,44 +1,50 @@
-section{
-   
-    &.bg-image{
-         background-image: url('./../../../assets/images/background.png');
-    // background-repeat: no-repeat;
-        .Rhythm-image{
-            @media (max-width: 992px) {
-                width: 250px;
-                margin-top:50px;
-                
-            }
-            @media (max-width: 576px) {
-                width:200px; 
-            }
-        }
-        @media (max-width: 992px) {
+section {
+    &.bg-image {
+        background-image: url('./../../../assets/images/background.png');
+        background-repeat: no-repeat;
+
+        @media (max-width:$Large-lg) {
             flex-direction: column;
         }
-       
-        .registration-from-wrapper{
-               width: 650px;
-            @media (max-width: 992px) {
-                width: 480px;
-            }
-            @media (max-width: 576px) {
-                width: 300px;
-                height: 700px;  
-                overflow-y: scroll;
+
+        .Rhythm-image {
+            width: $login-logo-image-width;
+
+            @media (min-width:$Small-sm) {
+                width: $registration-image-width-sm;
+
             }
         }
-        form{
-            .profile-image{
-                width: 100px;
-                height: 100px;
-                border-radius: 50%;
+
+        .registration-form-wrapper {
+            overflow-y: scroll;
+            width: $registration-form-Width;
+            height: $registration-form-height;
+
+
+            @media (min-width: $Small-sm) {
+                width: auto;
+                height: $registration-form-height-sm;
             }
-            .pluse-image{
+
+            @media (min-width: $Large-lg) {
+                width: auto;
+                height: $registration-form-height-lg;
+            }
+        }
+
+        form {
+            .profile-image {
+                width: $select-profile-image-width;
+                height: $select-profile-image-height;
+                border-radius: $select-profile-image-Border-radius;
+            }
+
+            .pluse-image {
                 top: 75px;
                 right: 0;
             }
         }
     }
-  
+
 }
