--- a/src/app/core/component/profile-menu/profile-menu.component.html
+++ b/src/app/core/component/profile-menu/profile-menu.component.html
@@ -22,7 +22,7 @@
             </li>
             <li class="nav-item d-flex align-items-center  w-100 p-1">
                 <span class="icon-log-out fs-4"></span>
-                <a href="#" class="nav-link" (click)="logOut()">Log out</a>
+                <a class="nav-link" (click)="logOut()">Log out</a>
             </li>
         </ul>
     </div>
