--- a/src/app/core/component/header/header.component.html
+++ b/src/app/core/component/header/header.component.html
@@ -101,6 +101,14 @@
             <span class=" icon-Artist text-black ms-4"></span>
             <a routerLink="artist/artist-list"><span class="nav-link ">Artist</span></a>
           </li>
+          <li class="nav-item d-flex align-items-center cursor-pointer">
+            <span class=" icon-Artist text-black ms-4"></span>
+            <a routerLink="/login"><span class="nav-link ">login</span></a>
+          </li>
+          <li class="nav-item d-flex align-items-center cursor-pointer">
+            <span class=" icon-Artist text-black ms-4"></span>
+            <a routerLink="/ragistration"><span class="nav-link ">Registration</span></a>
+          </li>
           <li class="nav-item d-flex align-items-center cursor-pointer ">
             <span class="icon-calender text-black ms-4"></span>
             <a routerLink="/booking-history"><span class="nav-link  ">Booking History</span></a>
