--- a/src/app/studio/studio-booking-form-container/studio-booking-form-presentation/studio-booking-form-presentation.component.html
+++ b/src/app/studio/studio-booking-form-container/studio-booking-form-presentation/studio-booking-form-presentation.component.html
@@ -1,5 +1,5 @@
 <!-- studio-booking-form -->
-<div class="studio-book-form-wrapper d-flex flex-column bg-white  position-absolute h-100 end-0 p-2 p-sm-4 overflow-auto">
+<div class="form-wrapper d-flex flex-column bg-white  position-absolute h-100 end-0 p-2 p-sm-4 overflow-auto">
     <div class="header">
         <div class="d-flex align-items-center justify-content-between">
             <h3>Book Now</h3>
@@ -9,7 +9,7 @@
     </div>
     <form class="flex-grow-1">
         <div class="h-100 d-flex flex-column align-items-center justify-content-between">
-            <div class="row g-0" >
+            <div class="row g-0">
                 <!-- fullname -->
                 <div class="col-12">
                     <div class="form-group mt-3 mt-sm-5">
@@ -20,15 +20,16 @@
                 <!-- phone number -->
                 <div class="col-12">
                     <div class="form-group mt-3">
-                        <label for="PhoneNumber" class="fw-bold ">Phone Number <span class="text-danger"> *</span></label>
+                        <label for="PhoneNumber" class="fw-bold ">Phone Number <span class="text-danger">
+                                *</span></label>
                         <input type="text" class="form-control" id="PhoneNumber" placeholder="Phone Number">
                     </div>
                 </div>
-                 <!-- Date number -->
-                 <div class="col-12">
+                <!-- Date number -->
+                <div class="col-12">
                     <div class="form-group mt-3">
                         <label for="date" class="fw-bold ">Select Date<span class="text-danger"> *</span></label>
-                        <input type="date" class="form-control" id="date" >
+                        <input type="date" class="form-control" id="date">
                     </div>
                 </div>
                 <!-- Select Service Type -->
@@ -45,9 +46,9 @@
                 <div class="col-12 ">
                     <div class="mt-3">
                         <label for="s" class="fw-bold ">Additional Requirements <span class="text-danger">
-                            *</span></label>
+                                *</span></label>
                         <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-                      </div>
+                    </div>
                 </div>
             </div>
             <!-- submit and Cancel button -->
@@ -57,5 +58,5 @@
             </div>
         </div>
     </form>
-          
+
 </div>
