--- a/src/app/home-container/home-presentation/home-presentation.component.html
+++ b/src/app/home-container/home-presentation/home-presentation.component.html
@@ -88,7 +88,7 @@
     </div>
     <!-- end  Carousel Container -->
     <!-- studio -->
-    <div class="studio-wrapper mt-5">
+    <div class="studio-wrapper mt-5" [ngClass]="getSingleUser.userRoll === 'Artist'?'d-none':'d-block'">
         <!-- container -->
         <div class="container h-100 d-flex flex-column">
             <!-- header section -->
@@ -102,19 +102,19 @@
                 <div class="col-12 col-sm-6 col-md-4 col-lg-2 my-3" *ngFor="let i of [1,2,3,4,5,6]">
                     <app-card></app-card>
                 </div>
-                
+
             </div>
         </div>
     </div>
     <!-- end -->
     <!-- artrist -->
-    <div class="artist-wrapper mt-5">
+    <div class="artist-wrapper mt-5" [ngClass]="getSingleUser.userRoll === 'Studio Owner'?'d-none':'d-block'">
         <!-- container -->
         <div class="container h-100 d-flex flex-column">
             <!-- header section -->
             <div class="d-flex justify-content-between align-items-center pt-4">
                 <h3 class="fw-bold">Explore Artist</h3>
-                <a  class="text-primary fw-bold cursor-pointer" routerLink="/artist/artist-list">SEE ALL</a>
+                <a class="text-primary fw-bold cursor-pointer" routerLink="/artist/artist-list">SEE ALL</a>
             </div>
             <!-- card main wrapper -->
             <div class="row  ">
@@ -122,7 +122,7 @@
                 <div class="col-12 col-sm-6 col-md-4 col-lg-2 my-3" *ngFor="let i of [1,2,3,4,5,6]">
                     <app-card></app-card>
                 </div>
-                
+
             </div>
         </div>
     </div>
